# youtube-summarize-generator

./: .env  .gitignore  README.md  main.py  pyproject.toml  replit_zip_error_log.txt  structure.yaml
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.streamlit/: config.toml
.upm/: store.json
assets/: style.css
db/: migration.sql
pages/: history.py  settings.py
utils/: __init__.py  db_handler.py  gemini_processor.py  youtube_handler.py
